過去履歴テンプレート機能完成

--- a/app/templates/templates.html
+++ b/app/templates/templates.html
@@ -16,5 +16,14 @@
 
   <script src="{{ url_for('static', filename='js/template_list.js') }}"></script>
 
+  <hr>
+<h3>📁 見積書からテンプレートを追加</h3>
+<form id="upload-form" enctype="multipart/form-data">
+  <input type="file" name="file" accept=".xlsx" required>
+  <button type="submit">📤 アップロード</button>
+</form>
+
+    
+
 </body>
 </html>
